# Rust-react

./: .gitignore  README.md  package-lock.json  package.json
react-vite-frontend/: package-lock.json  package.json
react-vite-frontend/src/: App.tsx  index.css  main.tsx  types.ts
react-vite-frontend/src-tauri/: tauri.conf.json
react-vite-frontend/src/components/: ControlPanel.tsx  MouseClickButtons.tsx  MousePositionDisplay.tsx  ProgressPanel.tsx  RandomTimingPanel.tsx  RecordingPanel.tsx  StatusBar.tsx  StepsList.tsx  StepsListControls.tsx  WaitTimePanel.tsx
rust-backend/: Cargo.toml
rust-backend/src/: automation.rs  handlers.rs  lib.rs  main.rs  models.rs  mouse_keyboard.rs  websocket.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
