[package]
name = "mouse-keyboard-automation"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
enigo = "0.1"
device_query = "1.1"
rand = "0.8"
futures-util = "0.3"
tokio-stream = "0.1"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
clipboard-win = "4.5" 