[package]
name = "tauri-macro"
version = "0.1.0"
description = "Mouse & Keyboard Automation App"
authors = [""]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }
# embed-resource = "2"

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mouse-keyboard-automation = { path = "../rust-backend" } # Re-enabled backend

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

# นี่เป็นการตั้งค่าสำหรับการ optimization ขณะ release
[profile.release]
panic = "abort" # คืนค่าเมื่อเกิด panic
codegen-units = 1 # ใช้ optimization มากขึ้น ในการสร้าง binary
lto = true # เปิดใช้การ optimize ข้ามหน่วย
opt-level = "s" # optimize สำหรับขนาดไฟล์
